peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/Gds_Score_Request_Individual__c.object-meta.xml
<CustomObject>
    <label>Gds Score Request Individual</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Gds Score Request Individual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gds Score Request Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>