peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Ccan__c.field-meta.xml
<CustomField>
    <fullName>Ccan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ccan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>