peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/CREDITBUREAUDET_ALL005__c.field-meta.xml
<CustomField>
    <fullName>CREDITBUREAUDET_ALL005__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CREDITBUREAUDET ALL005</label>
    <length>255</length>
    <type>Text</type>
</CustomField>