peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>