peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Final_E_mail_Validity_Result__c.field-meta.xml
<CustomField>
    <fullName>Final_E_mail_Validity_Result__c</fullName>
    <description>Store Final E-mail Validity Result from contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final E-mail Validity Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>