peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Final_Email_Validity_Result__c.field-meta.xml
<CustomField>
    <fullName>Final_Email_Validity_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Email Validity Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>