peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/FraudFlag__c.field-meta.xml
<CustomField>
    <fullName>FraudFlag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FraudFlag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>