peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Guarantor_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Based_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor Based On</label>
    <referenceTo>Guarantor__c</referenceTo>
    <relationshipLabel>Gds Score Request Individuals</relationshipLabel>
    <relationshipName>Gds_Score_Request_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>