peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Is_PG_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_PG_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PG Changed</label>
    <type>Checkbox</type>
</CustomField>