peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Lexis_Nexis_Total_CRA_Lien_Judgments__c.field-meta.xml
<CustomField>
    <fullName>Lexis_Nexis_Total_CRA_Lien_Judgments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lexis Nexis Total CRA Lien Judgments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>