peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/OWNERSHIP_PERCENTAGE__c.field-meta.xml
<CustomField>
    <fullName>OWNERSHIP_PERCENTAGE__c</fullName>
    <description>Store OWNERSHIP PERCENTAGE from contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OWNERSHIP PERCENTAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>