peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/PG_Number__c.field-meta.xml
<CustomField>
    <fullName>PG_Number__c</fullName>
    <label>PG Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>