peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/PG_Utilization__c.field-meta.xml
<CustomField>
    <fullName>PG_Utilization__c</fullName>
    <description>response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PG Utilization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>