peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Request_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Request_Based_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Based On</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gds Score Request Individuals</relationshipLabel>
    <relationshipName>Gds_Score_Request_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>