peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Resp_Emailage_Datetime_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Resp_Emailage_Datetime_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resp Emailage Datetime Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>