peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Scorex_Requested_or_Hit__c.field-meta.xml
<CustomField>
    <fullName>Scorex_Requested_or_Hit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scorex Requested or Hit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>