peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Ssn__c.field-meta.xml
<CustomField>
    <fullName>Ssn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ssn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>