peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Store suffix from contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>