peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Store title from contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>