peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Total_Trades__c.field-meta.xml
<CustomField>
    <fullName>Total_Trades__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Trades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>