peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/VALIDITY_VERIFY_RESULT__c.field-meta.xml
<CustomField>
    <fullName>VALIDITY_VERIFY_RESULT__c</fullName>
    <description>Store VALIDITYVERIFY RESULT from contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VALIDITY VERIFY RESULT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>