peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Validity_Verify_Status__c.field-meta.xml
<CustomField>
    <fullName>Validity_Verify_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validity Verify Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>