peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/fields/Vantage__c.field-meta.xml
<CustomField>
    <fullName>Vantage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vantage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>