peac_dev/force-app/main/default/objects/Gds_Score_Request_Individual__c/recordTypes/Lease.recordType-meta.xml
<RecordType>
    <fullName>Lease</fullName>
    <active>true</active>
    <description>For lease app</description>
    <label>Lease</label>
</RecordType>